<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="16dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entry_title_Label"
                style="?android:listSeparatorTextViewStyle"/>s

            <EditText
                android:id="@+id/entry_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/entry_title_hint"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/entry_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerInside"
            android:cropToPadding="true"
            android:background="@android:color/darker_gray"
            />
        <ImageButton
            android:id="@+id/entry_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera"/>
        </LinearLayout>
    </LinearLayout>


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_details_hint"/>

    <EditText
        android:id="@+id/entry_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entry_details_label"/>

    <Button
        android:id="@+id/entry_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    <CheckBox
        android:id="@+id/work_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work_label"/>

    <CheckBox
        android:id="@+id/leisure_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leisure_label"/>

    <CheckBox
        android:id="@+id/sport_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sport_label"/>

    <CheckBox
        android:id="@+id/study_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/study_label"/>
    </LinearLayout>


    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save"/>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"/>



</LinearLayout>