<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/new_entry"
        android:icon="@drawable/ic_menu_log"
        android:title="@string/new_entry"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom"/>

    <!--<item-->
        <!--android:id="@+id/delete_entry"-->
        <!--android:icon="@drawable/ic_menu_delete"-->
        <!--android:title="@string/delete_entry"-->
        <!--app:showAsAction="ifRoom|withText"/>-->

    <item
        android:id="@+id/show_subtitle"
        android:title="@string/show_subtitle"
        app:showAsAction="ifRoom"/>



</menu>